fix input positioning on iOS Safari

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -43,12 +43,9 @@ div.theater span, svg {
 }
 
 input {
-	margin-left: 2%;
 	outline: none;
 	border: none;
 	font-size: 4vh;
-	padding-left: 1%;
-	padding-right: 1%;
 	color: maroon;
 	text-align: center;
 	max-width: 80vw;
@@ -59,7 +56,6 @@ div#controls {
 	flex-direction: row;
 	justify-content: center;
 	border: 1px solid maroon;
-	border-radius: 10px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 5vh;
@@ -124,6 +120,7 @@ button {
   white-space: nowrap;
   text-decoration: none;
   cursor: pointer;
+  padding: 0;
 }
 
 button:active {
